# serializer version: 1
# name: TestScenarioDcVsAcCoupling.test_snapshot_ac_coupled_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.03,
        'feed_in': 0.0,
        'grid_import': 204.42,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 6.61,
        'consumption': 194.6,
        'direct_pv': 28.07,
        'feed_in': 0.0,
        'grid_import': 159.92,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 36.07,
        'consumption': 215.45,
        'direct_pv': 38.06,
        'feed_in': 0.0,
        'grid_import': 141.32,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 65.71,
        'consumption': 208.5,
        'direct_pv': 41.35,
        'feed_in': 0.0,
        'grid_import': 101.45,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 93.76,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 0.0,
        'grid_import': 76.58,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 102.4,
        'consumption': 208.5,
        'direct_pv': 43.97,
        'feed_in': 0.0,
        'grid_import': 62.13,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 99.68,
        'consumption': 215.45,
        'direct_pv': 45.28,
        'feed_in': 0.0,
        'grid_import': 70.49,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 76.59,
        'consumption': 215.45,
        'direct_pv': 43.77,
        'feed_in': 0.0,
        'grid_import': 95.09,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 43.89,
        'consumption': 208.5,
        'direct_pv': 38.27,
        'feed_in': 0.0,
        'grid_import': 126.34,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 14.32,
        'consumption': 215.45,
        'direct_pv': 33.75,
        'feed_in': 0.0,
        'grid_import': 167.38,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.08,
        'consumption': 208.5,
        'direct_pv': 15.64,
        'feed_in': 0.0,
        'grid_import': 192.78,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 0.0,
      'full_cycles': 107.82,
      'grid_import': 1612.04,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioDcVsAcCoupling.test_snapshot_dc_coupled_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.03,
        'feed_in': 0.0,
        'grid_import': 204.42,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 7.5,
        'consumption': 194.6,
        'direct_pv': 28.07,
        'feed_in': 0.0,
        'grid_import': 159.02,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 39.87,
        'consumption': 215.45,
        'direct_pv': 38.06,
        'feed_in': 0.0,
        'grid_import': 137.52,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 72.06,
        'consumption': 208.5,
        'direct_pv': 41.35,
        'feed_in': 0.0,
        'grid_import': 95.09,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 102.17,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 0.0,
        'grid_import': 68.18,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 111.84,
        'consumption': 208.5,
        'direct_pv': 43.97,
        'feed_in': 0.0,
        'grid_import': 52.69,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 109.22,
        'consumption': 215.45,
        'direct_pv': 45.28,
        'feed_in': 0.0,
        'grid_import': 60.95,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 83.81,
        'consumption': 215.45,
        'direct_pv': 43.77,
        'feed_in': 0.0,
        'grid_import': 87.87,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 48.37,
        'consumption': 208.5,
        'direct_pv': 38.27,
        'feed_in': 0.0,
        'grid_import': 121.85,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 16.03,
        'consumption': 215.45,
        'direct_pv': 33.75,
        'feed_in': 0.0,
        'grid_import': 165.67,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.14,
        'consumption': 208.5,
        'direct_pv': 15.64,
        'feed_in': 0.0,
        'grid_import': 192.72,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 0.0,
      'full_cycles': 118.2,
      'grid_import': 1560.12,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioInverterLimit.test_snapshot_limited_inverter_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 8.91,
        'feed_in': 2.39,
        'grid_import': 65.49,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 0.0,
        'consumption': 67.2,
        'direct_pv': 14.38,
        'feed_in': 24.56,
        'grid_import': 52.82,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 18.43,
        'feed_in': 70.48,
        'grid_import': 55.97,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 18.63,
        'feed_in': 114.87,
        'grid_import': 53.37,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 19.87,
        'feed_in': 148.12,
        'grid_import': 54.53,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 19.5,
        'feed_in': 150.2,
        'grid_import': 52.5,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 20.0,
        'feed_in': 151.43,
        'grid_import': 54.4,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 19.46,
        'feed_in': 130.76,
        'grid_import': 54.94,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 18.08,
        'feed_in': 82.37,
        'grid_import': 53.92,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 16.9,
        'feed_in': 37.81,
        'grid_import': 57.5,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 11.11,
        'feed_in': 5.36,
        'grid_import': 60.89,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 73.09,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 39.18,
      'feed_in': 918.35,
      'full_cycles': 0.0,
      'grid_import': 689.42,
      'total_consumption': 876.0,
    }),
  })
# ---
# name: TestScenarioInverterLimit.test_snapshot_unlimited_inverter_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 8.91,
        'feed_in': 2.33,
        'grid_import': 65.49,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 0.0,
        'consumption': 67.2,
        'direct_pv': 14.38,
        'feed_in': 23.8,
        'grid_import': 52.82,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 18.43,
        'feed_in': 68.33,
        'grid_import': 55.97,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 18.63,
        'feed_in': 111.69,
        'grid_import': 53.37,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 19.87,
        'feed_in': 151.9,
        'grid_import': 54.53,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 19.5,
        'feed_in': 162.69,
        'grid_import': 52.5,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 20.0,
        'feed_in': 159.45,
        'grid_import': 54.4,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 19.46,
        'feed_in': 127.78,
        'grid_import': 54.94,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 18.08,
        'feed_in': 79.91,
        'grid_import': 53.92,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 16.9,
        'feed_in': 36.63,
        'grid_import': 57.5,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 72.0,
        'direct_pv': 11.11,
        'feed_in': 5.22,
        'grid_import': 60.89,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 74.4,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 73.09,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 929.73,
      'full_cycles': 0.0,
      'grid_import': 689.42,
      'total_consumption': 876.0,
    }),
  })
# ---
# name: TestScenarioNoBattery.test_snapshot_no_battery_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.03,
        'feed_in': 0.21,
        'grid_import': 204.42,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 0.0,
        'consumption': 194.6,
        'direct_pv': 28.07,
        'feed_in': 10.11,
        'grid_import': 166.53,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 38.06,
        'feed_in': 48.69,
        'grid_import': 177.39,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 41.35,
        'feed_in': 88.97,
        'grid_import': 167.15,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 126.67,
        'grid_import': 170.34,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 43.97,
        'feed_in': 138.22,
        'grid_import': 164.53,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 45.28,
        'feed_in': 134.16,
        'grid_import': 170.17,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 43.77,
        'feed_in': 103.47,
        'grid_import': 171.68,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 38.27,
        'feed_in': 59.72,
        'grid_import': 170.23,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 33.75,
        'feed_in': 19.79,
        'grid_import': 181.7,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 15.64,
        'feed_in': 0.7,
        'grid_import': 192.86,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 730.71,
      'full_cycles': 0.0,
      'grid_import': 2151.15,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioSeasonalBehavior.test_snapshot_seasonal_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.03,
        'feed_in': 0.0,
        'grid_import': 204.42,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 7.5,
        'consumption': 194.6,
        'direct_pv': 28.07,
        'feed_in': 0.0,
        'grid_import': 159.02,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 39.87,
        'consumption': 215.45,
        'direct_pv': 38.06,
        'feed_in': 0.0,
        'grid_import': 137.52,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 72.06,
        'consumption': 208.5,
        'direct_pv': 41.35,
        'feed_in': 0.0,
        'grid_import': 95.09,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 102.17,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 0.0,
        'grid_import': 68.18,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 111.84,
        'consumption': 208.5,
        'direct_pv': 43.97,
        'feed_in': 0.0,
        'grid_import': 52.69,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 109.22,
        'consumption': 215.45,
        'direct_pv': 45.28,
        'feed_in': 0.0,
        'grid_import': 60.95,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 83.81,
        'consumption': 215.45,
        'direct_pv': 43.77,
        'feed_in': 0.0,
        'grid_import': 87.87,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 48.37,
        'consumption': 208.5,
        'direct_pv': 38.27,
        'feed_in': 0.0,
        'grid_import': 121.85,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 16.03,
        'consumption': 215.45,
        'direct_pv': 33.75,
        'feed_in': 0.0,
        'grid_import': 165.67,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.14,
        'consumption': 208.5,
        'direct_pv': 15.64,
        'feed_in': 0.0,
        'grid_import': 192.72,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 0.0,
      'full_cycles': 118.2,
      'grid_import': 1560.12,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioWithBattery.test_snapshot_large_battery_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.03,
        'feed_in': 0.0,
        'grid_import': 204.42,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 6.65,
        'consumption': 194.6,
        'direct_pv': 28.07,
        'feed_in': 0.0,
        'grid_import': 159.87,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 40.29,
        'consumption': 215.45,
        'direct_pv': 38.06,
        'feed_in': 0.0,
        'grid_import': 137.09,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 72.06,
        'consumption': 208.5,
        'direct_pv': 41.35,
        'feed_in': 0.0,
        'grid_import': 95.09,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 102.17,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 0.0,
        'grid_import': 68.18,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 111.84,
        'consumption': 208.5,
        'direct_pv': 43.97,
        'feed_in': 0.0,
        'grid_import': 52.69,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 109.22,
        'consumption': 215.45,
        'direct_pv': 45.28,
        'feed_in': 0.0,
        'grid_import': 60.95,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 83.81,
        'consumption': 215.45,
        'direct_pv': 43.77,
        'feed_in': 0.0,
        'grid_import': 87.87,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 48.37,
        'consumption': 208.5,
        'direct_pv': 38.27,
        'feed_in': 0.0,
        'grid_import': 121.85,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 16.03,
        'consumption': 215.45,
        'direct_pv': 33.75,
        'feed_in': 0.0,
        'grid_import': 165.67,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.0,
        'consumption': 208.5,
        'direct_pv': 15.64,
        'feed_in': 0.0,
        'grid_import': 192.86,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 0.0,
      'full_cycles': 59.05,
      'grid_import': 1560.69,
      'total_consumption': 2536.75,
    }),
  })
# ---
# name: TestScenarioWithBattery.test_snapshot_small_battery_results
  dict({
    'monthly': dict({
      1: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 11.03,
        'feed_in': 0.0,
        'grid_import': 204.42,
        'pv_generation': 11.89,
      }),
      2: dict({
        'battery': 7.84,
        'consumption': 194.6,
        'direct_pv': 28.07,
        'feed_in': 0.0,
        'grid_import': 158.68,
        'pv_generation': 40.39,
      }),
      3: dict({
        'battery': 39.7,
        'consumption': 215.45,
        'direct_pv': 38.06,
        'feed_in': 0.0,
        'grid_import': 137.69,
        'pv_generation': 91.8,
      }),
      4: dict({
        'battery': 68.48,
        'consumption': 208.5,
        'direct_pv': 41.35,
        'feed_in': 4.42,
        'grid_import': 98.67,
        'pv_generation': 137.88,
      }),
      5: dict({
        'battery': 75.99,
        'consumption': 215.45,
        'direct_pv': 45.11,
        'feed_in': 32.86,
        'grid_import': 94.36,
        'pv_generation': 181.75,
      }),
      6: dict({
        'battery': 73.66,
        'consumption': 208.5,
        'direct_pv': 43.97,
        'feed_in': 47.28,
        'grid_import': 90.88,
        'pv_generation': 192.77,
      }),
      7: dict({
        'battery': 76.11,
        'consumption': 215.45,
        'direct_pv': 45.28,
        'feed_in': 40.2,
        'grid_import': 94.06,
        'pv_generation': 189.87,
      }),
      8: dict({
        'battery': 74.51,
        'consumption': 215.45,
        'direct_pv': 43.77,
        'feed_in': 11.48,
        'grid_import': 97.17,
        'pv_generation': 155.79,
      }),
      9: dict({
        'battery': 48.37,
        'consumption': 208.5,
        'direct_pv': 38.27,
        'feed_in': 0.0,
        'grid_import': 121.85,
        'pv_generation': 103.69,
      }),
      10: dict({
        'battery': 16.03,
        'consumption': 215.45,
        'direct_pv': 33.75,
        'feed_in': 0.0,
        'grid_import': 165.67,
        'pv_generation': 56.65,
      }),
      11: dict({
        'battery': 0.31,
        'consumption': 208.5,
        'direct_pv': 15.64,
        'feed_in': 0.0,
        'grid_import': 192.55,
        'pv_generation': 17.28,
      }),
      12: dict({
        'battery': 0.0,
        'consumption': 215.45,
        'direct_pv': 1.31,
        'feed_in': 0.0,
        'grid_import': 214.14,
        'pv_generation': 1.39,
      }),
    }),
    'totals': dict({
      'curtailed': 0.0,
      'feed_in': 136.25,
      'full_cycles': 160.33,
      'grid_import': 1670.14,
      'total_consumption': 2536.75,
    }),
  })
# ---
